app-mysql/kubernets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "mysql-namespace"
  labels:
    name: "mysql-namespace"
