app-mysql/kubernets/netpol-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "mysql-networkpolicy-egress"
  namespace: "mysql-namespace"
  labels:
    app: mysql-label
    app.kubernetes.io/name: mysql-app
spec:
  podSelector:
    matchLabels:
      app: mysql-label
      app.kubernetes.io/name: mysql-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: "backend-namespace"
      podSelector:
        matchLabels:
          app: backend-label
          app.kubernetes.io/name: backend-app
    ports:
      - protocol: TCP
        port: 3306
